--- a/index.html
+++ b/index.html
@@ -2,22 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>JavaScript Clock</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Simple JavaScript Clock</title>
   </head>
 
   <body>
-    <!-- Create a main div called clock ; then one div called clock-face
-      and inside this clock-face div, we have to make one div for hour, one for minutes 
-      and one last for seconds, that is all ! !-->
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
         <div class="hand min-hand"></div>
-        <div class="hand second-hand"></div>
+        <div class="hand sec-hand"></div>
       </div>
     </div>
-
-    <script src="script.js"></script>
   </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
